# rphys

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.codex-archive/agents/: master-plan-reviewer.toml  pr-manager.toml
.codex-archive/prompts/: master-plan-draft.md  master-plan-refine.md  phase-loop-management.md  phase-pr-body-draft.md  pr-manager-handoff.md  stage-1-planning-notes-facilitate.md  stage-1-planning-notes-resume.md
.codex-archive/templates/: implementation-plan.md  master-implementation-plan.md  master-plan-refinement-summary.md  phase-notes.md  phase-pr-body.md  review-report.md
.codex-archive/workflows/: README.md  stage-2-master-plan.md  stage-3-implementation.md
.codex/agents/: blocker-fixer.toml  code-reviewer.toml  coding-worker.toml  execution-playbook-writer.toml  implementation-planner.toml  legacy-auditor.toml  master-plan-planner.toml  master-plan-refiner.toml  master-plan-reviewer.toml  phase-planner.toml  phase-worker.toml  phase0-planner.toml  pr-manager.toml  rfc-planner.toml  roadmap-planner.toml  roadmap-stage-context-planner.toml  roadmap-stage-design-implication-reviewer.toml  roadmap-stage-design-proposer.toml  roadmap-stage-functionality-decision-auditor.toml  roadmap-stage-functionality-mapper.toml  roadmap-stage-implementation-planner.toml  roadmap-stage-phase-shaper.toml  roadmap-stage-plan-quality-reviewer.toml  roadmap-stage-validation-planner.toml  rphys-phase-executor.toml  rphys-phase-planner.toml  rphys-phase-refiner.toml  rphys-phase-reviewer.toml  rphys-plan-reviewer.toml  rphys-pr-preparer.toml  science-reviewer.toml
.codex/prompts/: README.md  blocker-fixer-handoff.md  code-reviewer-handoff.md  coding-worker-handoff.md  (+36 more)
.github/: pull_request_template.md
docs/: GLOSSARY.md  findings.md  notes.md  roadmap.md  rphys_architecture_plan_v3.md  rphys_implementation_roadmap_v1.md  rphys_revised_package_architecture.md
tests/: README.md  test_data_keys.py  test_dependency_boundaries.py  test_error_hierarchy.py  test_field_specs_values.py  test_public_contract_docs.py  test_public_imports.py
tools/: __init__.py
(+606 files in other folders)
